--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^5.15.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.15.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -36,7 +38,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
